# devcode

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: main.rs  renderer.rs
src/renderer/: code_view.rs  code_view_tabs.rs  fs_tree.rs  input.rs  mod.rs  rectangle.rs  rectangle_shader.wgsl
src/renderer/code_view/: code.rs  code_view.rs  gutter.rs  highlight.rs  mod.rs
