[package]
name = "devcode"
version = "0.1.0"
authors = ["crowlkats <13135287+crowlKats@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[dependencies]
winit = "0.25.0"
wgpu = "0.10.1"
wgpu_glyph = "0.14.1"
anyhow = "1.0.43"
futures = "0.3.16"
shellexpand = "2.1.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
ropey = "1.3.1"
num_enum = "0.5.4"

# tree-sitter
tree-sitter = "=0.19.2"
tree-sitter-highlight = "0.19.2"
tree-sitter-rust = "0.19.0"
