[package]
name = "devcode"
version = "0.1.0"
authors = ["crowlkats <13135287+crowlKats@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[dependencies]
winit = "0.25.0"
wgpu = "0.10.1"
wgpu_glyph = "0.14.1"
anyhow = "1.0.43"
futures = "0.3.16"
shellexpand = "2.1.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
ropey = "1.3.1"
num_enum = "0.5.4"

# tree-sitter
tree-sitter = "=0.19.2"
tree-sitter-highlight = "0.19.2"

# tree-sitter-bash = "0.19.0" doesnt expose HIGHLIGHTS_QUERY
# C missing
# tree-sitter-c-sharp = "0.16.1" outdated
tree-sitter-cpp = "0.19.0"
# CSS missing
# tree-sitter-elm = "5.3.7" conflict with rust
# Eno missing
# ERB / EJS missing
# Fennel missing
# tree-sitter-go = "0.16.0" outdated
# HTML missing
tree-sitter-java = "0.19.0"
tree-sitter-javascript = "0.19.0"
# tree-sitter-lua = "0.0.2" doesnt expose HIGHLIGHTS_QUERY
# Make missing
# tree-sitter-markdown = "0.7.1" doesnt expose HIGHLIGHTS_QUERY
tree-sitter-ocaml = "0.19.0"
# PHP missing
tree-sitter-python = "0.19.0"
# tree-sitter-ruby = "0.17.0" outdated
tree-sitter-rust = "0.19.0"
# R missing
# S-expressions missing
# SPARQL missing
# SystemRDL missing
# tree-sitter-svelte = "0.8.1" conflict with rust
# TOML missing
# Turtle missing
tree-sitter-typescript = "0.19.0"
# Verilog missing
# VHDL missing
# Vue missing
# YAML missing
# WASM missing
